shared-business-logics/services/centralized-dashboard/Backend/Java/gateway-services/websocket-gateway-service/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: websocket-gateway-service-ingress
  namespace: centralized-dashboard
  labels:
    app: websocket-gateway-service
    team: team-f-centralized-dashboard
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Frame-Options: SAMEORIGIN";
      more_set_headers "X-Content-Type-Options: nosniff";
    nginx.ingress.kubernetes.io/websocket-services: "websocket-gateway-service"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - websocket-gateway.gogidix.com
    secretName: websocket-gateway-service-tls
  rules:
  - host: websocket-gateway.gogidix.com
    http:
      paths:
      - path: /ws(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: websocket-gateway-service
            port:
              number: 8908
      - path: /
        pathType: Prefix
        backend:
          service:
            name: websocket-gateway-service
            port:
              number: 8908
